--- a/PurBeurre/substitution_app/static/substitution_app/css/creative.css
+++ b/PurBeurre/substitution_app/static/substitution_app/css/creative.css
@@ -669,6 +669,7 @@ header.masthead p {
 .buttonLegal {
   font-size: 1.5rem;
 }
-.testcolor {
+.boardcolor {
   background-color: black;
+  color: white;
 }
