--- a/PurBeurre/templates/base.html
+++ b/PurBeurre/templates/base.html
@@ -58,6 +58,9 @@
                     <a class="nav-link js-scroll-trigger" href="{% url 'my account' %}"><img src="{% static 'substitution_app/img/account_logo.png' %}" title="Mon compte" alt="Mon compte"></a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="{% url 'forum' %}"><img src="{% static 'substitution_app/img/forum.png' %}" title="Forum" alt="Forum"></a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="{% url 'my products' %}"><img src="{% static 'substitution_app/img/carrot.png' %}" title="Mes aliments" alt="Mes aliments"></a>
                 </li>
                 <li class="nav-item">
@@ -90,6 +93,9 @@
 
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="{% url 'connection' %}"><img src="{% static 'substitution_app/img/account_logo.png' %}" title="Se connecter" alt="Se connecter"></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="{% url 'forum' %}"><img src="{% static 'substitution_app/img/forum.png' %}" title="Forum" alt="Forum"></a>
             </li>
           </ul>
       </div>
