--- a/PurBeurre/forum/templates/forum/forum_home_page.html
+++ b/PurBeurre/forum/templates/forum/forum_home_page.html
@@ -10,37 +10,14 @@
 
     {% block body %}
 
-    <header class="masthead text-center text-white d-flex">
-      <div class="container my-auto">
-        <div class="row">
-          <div class="col-lg-10 mx-auto">
-            <h1 class="text-uppercase">
-              <strong>FORUM !!!</strong>
-            </h1>
-            <hr>
-          </div>
-          <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">Trouvez un produit de substitution pour ceux que vous consommez tous les jours.</p>
-            <li class="nav-item">
-                <form class="navbar-form navbar-right inline-form" action="{% url 'product select' %}" method="POST">
-                    {% csrf_token %} 
-                  <input type="search" name="userQuery" class="input-sm form-control" placeholder="Recherche">
-              </li>
-              <li class="nav-item">
-                  <button type="submit" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-eye-open"></span> Chercher</button>
-                </form>    
-              </li>
-          </div>
-        </div>
-      </div>
-    </header>
+
       <body>
-        <div class="container">
+        <div style="padding: 200px 0 200px 0" class="container">
           <ol class="breadcrumb my-4">
             <li class="breadcrumb-item active">Forum Pur Beurre</li>
           </ol>
           <table class="table">
-            <thead class="thead-inverse testcolor">
+            <thead class="thead-inverse boardcolor">
               <tr>
                 <th>Rubriques</th>
                 <th>Posts</th>
@@ -52,17 +29,34 @@
                 {% for heading in headings %}
                 <tr>
                   <td>
-                    {{ heading.name }}
+                    <a href="{% url 'forum topics' heading.pk %}">{{ heading.name }}</a>
                     <small class="text-muted d-block">{{ heading.description }}</small>
                   </td>
-                  <td class="align-middle">0</td>
-                  <td class="align-middle">0</td>
-                  <td></td>
+                  <td class="align-middle">{{ heading.get_posts_count }}</td>
+                  <td class="align-middle">{{ heading.topics.count }}</td>
+                  <td>
+
+                      {% with post=heading.get_last_post %}
+                      {% if post %}
+                        <small>
+                          <a href="{% url 'topic posts' heading.pk post.topic.pk %}">
+                            By {{ post.created_by }} at {{ post.created_at }}
+                          </a>
+                        </small>
+                      {% else %}
+                        <small class="text-muted">
+                          <em>No posts yet.</em>
+                        </small>
+                      {% endif %}
+                    {% endwith %}
+
+                  </td>
                 </tr>
               {% endfor %}
             </tbody>
           </table>
         </div>
       </body>
+    
 
     {% endblock %}
